--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@ body {
   width: 100vw;
   height: 100vh; }
 
-/*HEADER*/
+/*---------------------------------------------------HEADER----------------------------------------------------------------*/
 header {
   background: #159957;
   background: -webkit-linear-gradient(to right, #155799, #159957);
@@ -42,15 +42,15 @@ header {
 .logotipo h1 {
   color: #0b0b5f; }
 
-/* navegador*/
-#navbarNav {
+/*----------------------------------------------- navegador----------------------------------------------*/
+#nav {
   color: #0f0f54;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 1rem; }
 
-/*footer*/
+/*------------------------------------------footer----------------------------------------------------*/
 footer {
   width: 100vw;
   background: #159957;
@@ -81,27 +81,13 @@ footer div a {
 
 /*---------------------------------------------NOSOTROS-----------------------------------------------------*/
 .nosotros {
-  background: #8e9eab;
-  background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);
-  background: linear-gradient(to top, #eef2f3, #8e9eab);
+  background: rgba(48, 51, 107, 0.7);
   color: #0b0b5f;
   font-family: 'Signika Negative', sans-serif; }
-  .nosotros__img {
-    width: 30rem;
-    height: 30rem; }
-
-.card {
-  margin-left: 4rem;
-  margin-top: 1rem; }
 
 /*---------------------------------------------SERVICIOS-----------------------------------------------------*/
 .servicios {
-  background: #8e9eab;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #eef2f3, #8e9eab);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: rgba(48, 51, 107, 0.7);
   width: 100vw;
   color: #0b0b5f;
   font-family: 'Signika Negative', sans-serif; }
@@ -111,120 +97,130 @@ footer div a {
 
 /*---------------------------------------------CLIENTES-----------------------------------------------------*/
 .clientes {
-  background: #8e9eab;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #eef2f3, #8e9eab);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: rgba(48, 51, 107, 0.7);
   width: 100vw;
   color: #0b0b5f;
-  font-family: 'Signika Negative', sans-serif;
-  display: grid;
-  grid-template-rows: repeat(5, 1fr);
-  grid-template-columns: repeat(6, 1fr);
-  align-content: space-between; }
-
-.clientes__titulo {
-  padding-top: 1rem;
-  grid-row: 1 / 2;
-  grid-column: 1 / 7;
-  text-align: center; }
+  font-family: 'Signika Negative', sans-serif; }
 
 @keyframes movimiento {
   0% {
     opacity: 0; }
-  25% {
+  15% {
     opacity: 0.1; }
-  50% {
+  35% {
     opacity: 0.2; }
-  75% {
+  55% {
     opacity: 0.3; }
-  100% {
+  75% {
     opacity: 0.4; } }
 
 .clientes__1 {
   animation-name: movimiento;
-  animation-duration: 5s;
-  grid-row: 2 / 3;
-  grid-column: 2 / 3; }
+  animation-duration: 4s; }
 
 .clientes__2 {
   animation-name: movimiento;
-  animation-duration: 5s;
-  grid-row: 2 / 3;
-  grid-column: 3 / 4; }
+  animation-duration: 4s; }
 
 .clientes__3 {
   animation-name: movimiento;
-  animation-duration: 5s;
-  grid-row: 2 / 3;
-  grid-column: 4 / 5; }
+  animation-duration: 4s; }
 
 .clientes__4 {
   animation-name: movimiento;
-  animation-duration: 5s;
-  grid-row: 2 / 3;
-  grid-column: 5 / 6; }
+  animation-duration: 4s; }
 
 .clientes__5 {
   animation-name: movimiento;
-  animation-duration: 5s;
-  grid-row: 2 / 3;
-  grid-column: 6 / 7; }
+  animation-duration: 4s; }
 
-/*---------------------------------------------------------------contacto*---------------------------------------------------------------------------*/
+/*---------------------------------------------------------------contacto---------------------------------------------------------------------------*/
 .contacto {
-  background: #8e9eab;
-  background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);
-  background: linear-gradient(to top, #eef2f3, #8e9eab);
-  width: 100vw;
-  height: 80vh;
-  color: #0b0b5f;
-  font-family: 'Signika Negative', sans-serif;
-  display: flex;
-  flex-direction: row;
-  padding: 5% 20% 5% 20%; }
-  .contacto__seccion1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-left: 6rem;
-    padding-top: 2rem; }
+  background: rgba(48, 51, 107, 0.7);
+  color: #0b0b5f; }
 
-.contacto__seccion2 {
+.seccion_2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 6rem;
-  padding-top: 3rem; }
-  .contacto__seccion2__ h2 {
-    transform: rotate(360deg);
-    transition-duration: 2s;
-    padding-bottom: 1rem; }
+  justify-content: center; }
 
-.form {
-  padding: 1%; }
-  .form__input {
-    border-color: #bbbbef;
-    border-radius: 5px;
-    border-style: inset;
-    padding: 2px 30px;
-    text-align: center; }
+.modal-content {
+  background: #159957;
+  background: -webkit-linear-gradient(to right, #155799, #159957);
+  background: linear-gradient(to right, #155799, #159957);
+  color: white; }
 
-.form1__boton {
-  background-color: #0b0b5f;
-  color: white;
-  border-radius: 5px;
-  border: none;
-  padding: 5px 10px;
-  margin-left: 14px; }
-
+/*__________________________________________________________________________________________MEDIAS_________________________________________________________________*/
 @media (max-width: 575.98px) {
   h1 {
-    font-size: 1rem; }
-  .fondo-color {
-    font-size: 1rem; }
-  h4 {
-    font-size: 1rem; } 
-  }
+    font-size: 1.5rem; }
+  h2 {
+    font-size: 1.5rem; }
+  p {
+    font-size: 0.9rem; }
+  #nav {
+    display: flex;
+    flex-direction: column;
+    align-items: start; }
+  #section2contacto {
+    font-size: 0.8rem; }
+  #parrafonosotros {
+    color: white;
+    padding-left: 1rem; }
+  #titulonosotros {
+    color: white;
+    text-align: center; }
+  .card-title h5 {
+    font-size: 0.9rem; }
+  #clientes {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  #tituo_clientes {
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .img_clientes {
+    width: 6rem;
+    height: 6rem; }
+  footer {
+    padding-left: 1rem;
+    text-align: center; }
+    footer .h4 {
+      font-size: 1rem; } }
+
+@media (max-width: 575.98px) and (min-width: 767.98px) {
+  #nav {
+    display: flex;
+    flex-direction: column;
+    align-items: start; } }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  #nav {
+    display: flex;
+    flex-direction: column;
+    align-items: start; } }
+
+@media (max-width: 767.98px) {
+  #clientes {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  #tituo_clientes {
+    padding: 5rem; } }
+
+@media (max-width: 991.98px) {
+  #clientes {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  #tituo_clientes {
+    padding: 5rem; } }
+
+@media (min-width: 992px) {
+  #main {
+    height: 100vw; }
+  #tituo_clientes {
+    padding: 5rem; } }
