--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -3,12 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     }
-
+  
      
     /*variable globales*/
+
 $color-titulos:rgb(11, 11, 95) ;
 $color-secundario:rgb(30, 112, 125);
-
+$fondo-color: rgba(48, 51, 107,.7);
 
     body {
 
@@ -18,7 +19,7 @@ $color-secundario:rgb(30, 112, 125);
 
     }
 
-    /*HEADER*/
+/*---------------------------------------------------HEADER----------------------------------------------------------------*/
 
 header {
 
@@ -78,10 +79,10 @@ header {
     
 }
 
-/* navegador*/
+/*----------------------------------------------- navegador----------------------------------------------*/
 
    
-#navbarNav {
+#nav {
     color:rgb(15, 15, 84);
     display: flex;
     flex-direction: column;
@@ -91,7 +92,7 @@ header {
 
 
 
-/*footer*/
+/*------------------------------------------footer----------------------------------------------------*/
 
 footer {
     width: 100vw;
@@ -137,7 +138,7 @@ footer div a {
 }
 
 .fondo-color {
-    background: rgba(48, 51, 107,.7);
+    background:$fondo-color;
     top: 0;
     left: 0;
     width: 100%;
@@ -149,12 +150,12 @@ footer div a {
  /*---------------------------------------------NOSOTROS-----------------------------------------------------*/ 
  
 .nosotros {
-    background: #8e9eab;  
-    background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);  
-    background: linear-gradient(to top, #eef2f3, #8e9eab);
     
+    background:$fondo-color;
     color: $color-titulos;
     font-family:'Signika Negative', sans-serif;
+
+}
    
 
 
@@ -163,9 +164,8 @@ footer div a {
 /*---------------------------------------------SERVICIOS-----------------------------------------------------*/
 
 .servicios{ 
-    background: #8e9eab;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    background:$fondo-color;
     width: 100vw;
     color: $color-titulos;
     font-family:'Signika Negative', sans-serif;
@@ -191,156 +191,228 @@ footer div a {
 
  .clientes {
     
-    background: #8e9eab;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to top, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   background-color: $fondo-color;
     width: 100vw;
-    color: rgb(11, 11, 95);
+    color:$color-titulos;
     font-family:'Signika Negative', sans-serif;
-    display:grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: repeat( 6, 1fr);
-    align-content: space-between;
-   
+  
 
  }
 
- .clientes__titulo {
-    padding-top: 1rem;
-    grid-row: 1 / 2 ;
-    grid-column: 1 / 7;
-    text-align: center;
-}
 
 @keyframes movimiento {
      0% {  opacity: 0; }
-     25% { opacity: 0.1;}
-     50% {  opacity: 0.2;}
-     75% {  opacity: 0.3;}
-    100% { opacity: 0.4;}
+     15% { opacity: 0.1;}
+     35% {  opacity: 0.2;}
+     55% {  opacity: 0.3;}
+     75% { opacity: 0.4;}
+  
     
 }
 
 .clientes__1 {
    
     animation-name: movimiento;
-    animation-duration: 5s;
-    grid-row: 2 / 3 ;
-    grid-column: 2 / 3;
-   
-   
-    
+    animation-duration: 4s; 
 
 }
 
 .clientes__2 {
    
     animation-name: movimiento;
-    animation-duration: 5s;
-    grid-row: 2 / 3 ;
-    grid-column: 3 / 4;
+    animation-duration: 4s;
    
 }
 
 .clientes__3 {
    
     animation-name: movimiento;
-    animation-duration: 5s;
-    grid-row: 2 / 3 ;
-    grid-column: 4 / 5;
+    animation-duration: 4s;
+   
     
 }
 
 .clientes__4 {
    
     animation-name: movimiento;
-    animation-duration: 5s;
-    grid-row: 2 / 3 ;
-    grid-column: 5 / 6;
-    
+    animation-duration: 4s;
+   
 }
 
 .clientes__5 {
    
     animation-name: movimiento;
-    animation-duration: 5s;
-    grid-row: 2 / 3 ;
-    grid-column: 6 / 7;
+    animation-duration: 4s;
   
 }   
 
 
-/*---------------------------------------------------------------contacto*---------------------------------------------------------------------------*/
+/*---------------------------------------------------------------contacto---------------------------------------------------------------------------*/
 
-.contacto {
-    background: #8e9eab; 
-    background: -webkit-linear-gradient(to top, #eef2f3, #8e9eab);  
-    background: linear-gradient(to top, #eef2f3, #8e9eab); 
-    width: 100vw;
-    height: 80vh;
-    color: rgb(11, 11, 95);
-    font-family:'Signika Negative', sans-serif;
-    display: flex;
-    flex-direction: row;
-    padding:5% 20% 5% 20%;
+.contacto{
+    background: $fondo-color;
+    color: $color-titulos;
+}
 
 
-     &__seccion1 {
-     display: flex;
-     flex-direction: column;
-     align-items:center;
-     padding-left:6rem ;
-     padding-top: 2rem;
+.seccion_2 {
 
-     }
-    }
-
-
-.contacto__seccion2 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 6rem;
-    padding-top: 3rem;
- 
-
-    &__ h2 {
-    
-    transform: rotate(360deg);
-    transition-duration: 2s;
-    padding-bottom: 1rem;
-    
-    
-
-  
-    }
-        }  
-
-.form {
-
-    padding: 1%;
- 
-    
-
-
-    &__input {
-
-    border-color: rgb(187, 187, 239);
-    border-radius: 5px;
-    border-style: inset;
-    padding:2px 30px;
-    text-align:center;
+    justify-content:center;
 
 }
 
-}
-
-.form1__boton {
-    background-color:rgb(11, 11, 95) ;
+.modal-content {
+    background: #159957;  
+    background: -webkit-linear-gradient(to right, #155799, #159957);  
+    background: linear-gradient(to right, #155799, #159957);
+    
     color: white;
-    border-radius: 5px;
-    border:none;
-    padding: 5px 10px;
-    margin-left: 14px;
+}
+
+/*__________________________________________________________________________________________MEDIAS_________________________________________________________________*/
+
+@media (max-width: 575.98px) {
+
+    h1 {
+        font-size: 1.5rem;
+    }
+    h2 {
+
+        font-size: 1.5rem;
+
+    }
+
+    p {
+        font-size: 0.9rem;
+
+    }
+
+    #nav {
+
+        display: flex;
+        flex-direction: column;
+        align-items:start;
+
+    }
+
+    #section2contacto {
+        font-size: 0.8rem;
+
+    }
+    #parrafonosotros {
+    color: rgb(255, 255, 255);
+    padding-left: 1rem;
+    }
+
+    #titulonosotros {
+        
+        color: rgb(255, 255, 255);
+        text-align: center;
+
+    }
+
+
+
+    .card-title h5 {
+
+        font-size: 0.9rem;
+
+    }
+  
+    #clientes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    
+    }
+
+    #tituo_clientes {
+
+        padding-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .img_clientes {
+        width: 6rem ;
+        height: 6rem; 
+    }
+
+
+    footer {
+        padding-left: 1rem;
+        text-align: center;
+        .h4 {font-size: 1rem;
+
+        }
+    }
+}
+
+@media (max-width: 575.98px) and (min-width: 767.98px) {
+    
+    #nav {
+
+        display: flex;
+        flex-direction: column;
+        align-items:start;
+
+    }
+
+}
+
+@media (min-width: 768px) and (max-width: 991.98px){
+    #nav {
+
+        display: flex;
+        flex-direction: column;
+        align-items:start;
+
+    }
+}
+
+@media (max-width: 767.98px) {
+
+    #clientes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        }
+        #tituo_clientes {
+        padding: 5rem;
+    } 
+ 
+ }
+
+ @media (max-width: 991.98px) { 
+    #clientes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        }
+        #tituo_clientes {
+            padding: 5rem;
 
   }
+ 
+ 
+}
+
+  @media (min-width: 992px)  {
+      #main {
+          height: 100vw;
+      }
+      #tituo_clientes {
+        padding: 5rem;
+      }
+      
+
+  }
+
+ 
